# personal-finance-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md
docs/api/: README.md  database.md
docs/deployment/: building.md  windows-executable.md
docs/developer/: architecture.md  contributing.md  development.md  setup.md
docs/troubleshooting/: common-issues.md
docs/user/: configuration.md  installation.md  quick-start.md  security-privacy.md  user-manual.md
installer/: build_installer.py
src/core/: document_processor.py  finance_profile.py  llm_client.py
src/mcp/: pdf_server.py  stock_server.py
src/rag/: vector_store.py
src/tray/: tray_app.py
src/ui/backend/: database.py  main.py  models.py  schemas.py
src/ui/frontend/: index.html  package.json  vite.config.ts
src/ui/frontend/src/: App.tsx  main.tsx
src/ui/frontend/src/components/: Sidebar.tsx
src/ui/frontend/src/pages/: Chat.tsx  Dashboard.tsx  Documents.tsx  RAGDocuments.tsx  Settings.tsx
src/ui/frontend/src/services/: api.ts
src/ui/frontend/src/types/: index.ts
